# cue-agentic-backend-prototype

./: .env.example  .gitignore  README.md  pyproject.toml
cue/: __init__.py  config.py
cue/llm/: chat.py
cue/obsidian/: images.py  writer.py
cue/ocr/: __init__.py  formatting.py  service.py  vision.py
cue_mark/: __init__.py  browser_fetch.py  enrich.py  fetch.py  models.py  page_gates.py  parser.py  prompts.py  service.py
cue_mark/linq/: client.py  commands.py  handler.py  parser.py  store.py  verify.py
cue_mark/telegram/: client.py  commands.py  formatting.py  handler.py  intent_router.py  parser.py  poller.py  routing.py  store.py
cue_search/: chunking.py  config.py  embeddings.py  indexer.py  main.py  models.py  sandbox.py  search_service.py  store.py
cue_search/agent/: prompts.py  tools.py
cue_search/llm/: ollama.py  openai.py
cue_server/: __init__.py  cli.py  logging_config.py  main.py  security.py
docs/: lancedb.md
tests/: test_chunking.py  test_embedded_images.py  test_linq.py  test_linq_commands.py  test_linq_images.py  test_logging_config.py  test_mark_embed_images.py  test_mark_enrich.py  test_mark_fetch.py  test_mark_parser.py  test_note_store.py  test_obsidian_writer.py  test_ocr.py  test_sandbox.py  test_search_summary_only.py  test_security.py  test_telegram.py  test_telegram_client.py  test_telegram_commands.py  test_telegram_formatting.py  test_telegram_images.py  test_telegram_intent_router.py  test_telegram_parser.py  test_telegram_poller.py  test_telegram_routing.py  test_telegram_store.py
