[project]
name = "cue-search"
version = "0.1.0"
description = "Cue /search sidecar — agentic RAG over mark export notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "lancedb>=0.33",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cue-search = "cue_search.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cue_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
