[project]
name = "cue-backend"
version = "0.2.0"
description = "Cue agentic backend — mark capture and /search sidecar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "lancedb>=0.33",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "trafilatura>=2.0",
    "uvicorn>=0.27",
    "pyobjc-framework-Vision>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cue = "cue_server.cli:cli"
cue-search = "cue_search.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cue", "cue_search", "cue_mark", "cue_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
